[package]
name = "bevy6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] } # Remove the dynamic feature for debugging.

# (https://bevy-cheatbook.github.io/pitfalls/performance.html):
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# > If you want, you can also enable LTO (Link-Time-Optimization) for the actual release builds, to squeeze out even
# > more performance at the cost of very slow compile times:
[profile.release]
lto = "thin"
