[package]
name = "bevy6"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "193e8c4ada2c324b5222735b0c558398bbbea196", features = ["dynamic"] } # Remove the dynamic feature for debugging.
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "193e8c4ada2c324b5222735b0c558398bbbea196" }

# There is a fork with a better way of doing my modification on github, but I leave this because of possible version
# mismatches.
bevy_mod_raycast = { path = "bevy_mod_raycast" }

# (https://bevy-cheatbook.github.io/pitfalls/performance.html):
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# > If you want, you can also enable LTO (Link-Time-Optimization) for the actual release builds, to squeeze out even
# > more performance at the cost of very slow compile times:
[profile.release]
lto = "thin"
