[package]
name = "mini-texture-generator"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7", default-features = false, features = [
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_text",          # Text/font rendering

    "bevy_winit",         # Window management
    "x11",                # Linux: Support X11 windowing system
    "wayland",            # Linux: Support Wayland windowing system

    "dynamic",  # Remove the dynamic feature for debugging.
] }

# There is a fork with a better way of doing my modification on github, but I leave this because of possible version
# mismatches.
bevy_mod_raycast = { path = "bevy_mod_raycast" }

clap = { version = "3", features = ["derive"] }
ron = "0.7.0"
serde = { version = "1", features = ["derive"] }

# (https://bevy-cheatbook.github.io/pitfalls/performance.html):
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# > If you want, you can also enable LTO (Link-Time-Optimization) for the actual release builds, to squeeze out even
# > more performance at the cost of very slow compile times:
[profile.release]
lto = "thin"
